# key_logger_detection

./: .gitignore  README.md  config.yaml  keylogger_detector.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
keylogger_detector/: cli.py  config.py  utils.py
keylogger_detector/core/: hash_engine.py  logger.py  reports.py  risk_engine.py  scanner.py  yara_scanner.py
rules/: keylogger.yar
tests/: test_reports.py  test_risk_engine.py  test_scanner.py
