[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keylogger-detector"
version = "0.1.0"
description = "A professional tool to detect potential keylogger indicators on Windows and Linux."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.4",
    "PyYAML>=6.0",
    "yara-python>=4.0.0",
]

[project.scripts]
keylogger-detect = "keylogger_detector.cli:main"

[tool.setuptools.packages.find]
include = ["keylogger_detector*"]
